; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/mlx4/extr_mcg.c_mlx4_multicast_promisc_remove.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/mlx4/extr_mcg.c_mlx4_multicast_promisc_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlx4_dev = type { i32 }

@MLX4_MC_STEER = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mlx4_multicast_promisc_remove(%struct.mlx4_dev* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.mlx4_dev*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.mlx4_dev* %0, %struct.mlx4_dev** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %8 = load %struct.mlx4_dev*, %struct.mlx4_dev** %5, align 8
  %9 = call i64 @mlx4_is_mfunc(%struct.mlx4_dev* %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %17

11:                                               ; preds = %3
  %12 = load %struct.mlx4_dev*, %struct.mlx4_dev** %5, align 8
  %13 = load i32, i32* %6, align 4
  %14 = load i32, i32* @MLX4_MC_STEER, align 4
  %15 = load i32, i32* %7, align 4
  %16 = call i32 @mlx4_PROMISC(%struct.mlx4_dev* %12, i32 %13, i32 %14, i32 0, i32 %15)
  store i32 %16, i32* %4, align 4
  br label %23

17:                                               ; preds = %3
  %18 = load %struct.mlx4_dev*, %struct.mlx4_dev** %5, align 8
  %19 = load i32, i32* %7, align 4
  %20 = load i32, i32* @MLX4_MC_STEER, align 4
  %21 = load i32, i32* %6, align 4
  %22 = call i32 @remove_promisc_qp(%struct.mlx4_dev* %18, i32 %19, i32 %20, i32 %21)
  store i32 %22, i32* %4, align 4
  br label %23

23:                                               ; preds = %17, %11
  %24 = load i32, i32* %4, align 4
  ret i32 %24
}

declare dso_local i64 @mlx4_is_mfunc(%struct.mlx4_dev*) #1

declare dso_local i32 @mlx4_PROMISC(%struct.mlx4_dev*, i32, i32, i32, i32) #1

declare dso_local i32 @remove_promisc_qp(%struct.mlx4_dev*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
